popup z-index was updated to ensure that the leaflet controls are hidden behind the popup

--- a/webofneeds/won-owner-webapp/src/main/webapp/style/_landingpage.scss
+++ b/webofneeds/won-owner-webapp/src/main/webapp/style/_landingpage.scss
@@ -12,7 +12,7 @@
   height: 100%;
   background: $won-light-blue;
   opacity: 0.5;
-  z-index: 100;
+  z-index: 1001; //so leaflet does not mess with the curtain
 }
 
 main.landingpage {
